templates/testwebapp_template.yaml
---
# Source: testwebapp/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-testwebapp
  labels:
    helm.sh/chart: testwebapp-0.1.1
    app.kubernetes.io/name: testwebapp
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: testwebapp
    app.kubernetes.io/instance: release-name
---
# Source: testwebapp/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-testwebapp
  labels:
    helm.sh/chart: testwebapp-0.1.1
    app.kubernetes.io/name: testwebapp
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: testwebapp
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: testwebapp
        app.kubernetes.io/instance: release-name
    spec:
      imagePullSecrets:
        - name: dpr-secret
      serviceAccountName: release-name-testwebapp
      securityContext:
        {}
      containers:
        - name: testwebapp
          securityContext:
            {}
          image: "forchaladtest/testwebapp:0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
# Source: testwebapp/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-testwebapp
  labels:
    helm.sh/chart: testwebapp-0.1.1
    app.kubernetes.io/name: testwebapp
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "testwebapp.local"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-testwebapp
                port:
                  number: 80
---
# Source: testwebapp/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-testwebapp-test-connection"
  labels:
    helm.sh/chart: testwebapp-0.1.1
    app.kubernetes.io/name: testwebapp
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-testwebapp:80']
  restartPolicy: Never
